# stwp

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: .cdsapirc.example  Dockerfile
api/app/: main.py
demos/: baselines-demo.ipynb  experiments.ipynb  nn-demo.ipynb  tigge-demo.ipynb
docs/releases/: v1.0.0.md
exp/: experiments.py
hpo/: hpo-analysis.ipynb  hpo.py  visualisation.ipynb  visualisation.py  visualization.py
models/: baseline_regressor.py  config.py  data_processor.py
models/cnn/: cnn.py  processor.py  trainer.py
models/exp_smoothing/: smoothing.py
models/gnn/: gnn_module.py  processor.py  st_encoder_module.py  trainer.py
models/grad_boost/: grad_booster.py
models/linear_reg/: linear_regressor.py  simple_linear_regressor.py
models/tigge/: tigge.py
src/stwp/: __init__.py  config.py  constants.py  features.py
src/stwp/api/: __init__.py  main.py  schemas.py
src/stwp/api/routes/: maps.py  weather.py
src/stwp/api/services/: map_generator.py  prediction.py
src/stwp/data/: __init__.py  download.py  processor.py  tigge.py
src/stwp/models/: __init__.py  base.py
src/stwp/models/boosting/: __init__.py  grad_booster.py
src/stwp/models/cnn/: __init__.py  cnn.py  processor.py  trainer.py
src/stwp/models/gnn/: __init__.py  callbacks.py  gnn_module.py  processor.py  st_encoder_module.py  trainer.py
src/stwp/models/linear/: __init__.py  linear_regressor.py  simple_linear_regressor.py
src/stwp/models/smoothing/: __init__.py  smoothing.py
src/stwp/models/tigge/: __init__.py  tigge.py
src/stwp/utils/: __init__.py  encoding.py  progress.py  visualization.py
tests/: __init__.py  conftest.py
tests/api/: __init__.py  test_endpoints.py  test_schemas.py
tests/unit/: __init__.py  test_config.py  test_data_processor.py  test_encoding.py  test_experiments.py  test_features.py  test_hpo.py  test_hpo_visualization.py  test_visualization.py
utils/: datetime_operations.py  draw_functions.py
