[project]
name = "stwp"
version = "0.1.0"
description = "Short Term Weather Prediction - ML system for weather forecasting"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "STWP Authors" }
]
keywords = ["weather", "prediction", "machine-learning", "gnn", "forecasting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]

dependencies = [
    "cdsapi>=0.7.0",
    "matplotlib>=3.9.0",
    "xarray>=2024.9.0",
    "xgboost>=2.1.0",
    "cfgrib>=0.9.12",
    "eccodes>=1.7.0",
    "ecmwflibs>=0.6.0",
    "ecmwf-api-client>=1.6.0",
    "cartopy>=0.23.0",
    "numpy>=2.0.0",
    "optuna>=3.6.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.14.0",
    "torch>=2.4.0",
    "torch-geometric>=2.5.0",
    "statsmodels>=0.14.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pygrib>=2.1.0",
    "catboost>=1.2.0",
    "seaborn>=0.13.0",
    "pandas>=2.2.0",
    "lightgbm>=4.5.0",
    "ruff>=0.14.10",
    "mypy>=1.19.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "mypy>=1.11.0",
    "ruff>=0.6.0",
    "pre-commit>=3.8.0",
    "httpx>=0.27.0",
    "ipykernel>=7.1.0",
]

[project.scripts]
stwp-api = "stwp.api.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stwp"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]
extend-exclude = ["**/*.ipynb"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # Pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "N806", # Uppercase variables
    "N803", # Uppercase arguments
    "N802", # Function upercase
]

[tool.ruff.lint.isort]
known-first-party = ["stwp"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
strict_optional = true
check_untyped_defs = true
disallow_untyped_defs = false
exclude = [
    "demos/",
    "hpo/",
    "exp/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = [
    "--cov=src/stwp",
    "--cov-report=term-missing",
    "--cov-report=html",
    "-v",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/stwp"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

